plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.3'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'jacoco' 
	 id 'com.bmuschko.docker-remote-api' version '7.2.0'
}

group = 'com.chess.tms'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
apply plugin: 'com.bmuschko.docker-remote-api'
ext {
	set('springCloudVersion', "2023.0.3")
}

dependencies {
	// Main application dependencies
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
	implementation 'org.hibernate.validator:hibernate-validator:8.0.0.Final'
	implementation 'org.glassfish:jakarta.el:4.0.2'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'

	// JWT and JSON processing
	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// Testing dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'  // JUnit 5, Mockito, Spring Testing
	testImplementation 'org.springframework.security:spring-security-test'  // Spring Security Testing

	testImplementation 'com.h2database:h2:2.2.224'  // H2 in-memory database
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy 'jacocoTestReport'
}

jacoco {
	toolVersion = "0.8.10" 
}

jacocoTestReport {
	reports {
		xml.required.set(true)
		csv.required.set(true)
		html.outputLocation.set(layout.buildDirectory.dir('jacocoHtml'))
	}
}

tasks.withType(JavaCompile) {
	options.encoding = 'UTF-8'
}
